# memray

./: .buildinfo  .bumpversion.cfg  .clang-format  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  KEYS  LICENSE  MANIFEST.in  Makefile  NEWS.rst  README.md  ai_fix.patch  api.html  asv.conf.json  attach.html  changelog.html  flamegraph.html  genindex.html  getting_started.html  index.html  jupyter_magic.html  licenses.html  live.html  memory.html  native_mode.html  objects.inv  overview.html  package-lock.json  package.json  performance.html  pre-commit-config.yaml  py-modindex.html  pyproject.toml  python_allocators.html  requirements-docs.txt  (+18 more)
.devcontainer/: devcontainer.json
.devcontainer/tutorials/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---bug-report.yaml  ---feature-request.md  ---feature-request.yaml  config.yml
.github/workflows/: build.yml  build_wheels.yml  codeql-analysis.yml  coverage.yml  docs.yml  droid-issue-to-pr.yml  droid-review.yml  droid.yml  news-check.yml  pre-commit-update.yml  python314-tailcall.yml  sanity-check.yml  test_uv_python.yml  zizmor.yml
_modules/: index.html
_modules/memray/: _destination.html
_sources/: api.rst.txt  attach.rst.txt  changelog.rst.txt  flamegraph.rst.txt  index.rst.txt  jupyter_magic.rst.txt  licenses.rst.txt  live.rst.txt  memory.rst.txt  overview.rst.txt  performance.rst.txt  python_allocators.rst.txt  run.rst.txt  stats.rst.txt  summary.rst.txt  supported_environments.rst.txt  table.rst.txt  transform.rst.txt  tree.rst.txt
_sources/tutorials/: 1.rst.txt  2.rst.txt  index.rst.txt
_static/: memray-flamegraph-sqlite.html  pygments.css
_static/css/: custom.css
_static/flamegraphs/: memray-flamegraph-fib.html
_static/js/: custom.js
_static/scripts/: furo.js  furo.js.map
_static/styles/: furo-extensions.css  furo-extensions.css.map  furo.css  furo.css.map
benchmarks/: benchmarks.py  pystone.py  requirements.txt
benchmarks/benchmarking/: __main__.py  plot.py
docs/: Makefile  additional_features.rst  api.rst  attach.rst  changelog.rst  conf.py  contents.rst  exercise_1.rst  exercise_2.rst  exercise_3.rst  flamegraph.rst  getting_started.rst  index.rst  intro.rst  jupyter_magic.rst  lab_1.rst  lab_2.rst  lab_3.rst  licenses.rst  live.rst  manpage.rst  memory.rst  memray.1  native.rst  native_mode.rst  overview.rst  python_allocators.rst  run.rst  sampling.rst  stats.rst  summary.rst  supported_environments.rst  table.rst  temporary_allocations.rst  transform.rst  tree.rst  usage.rst
docs/_templates/: index.html
docs/cli/: flamegraph.rst  live.rst  run.rst  stats.rst  summary.rst  table.rst  tree.rst
docs/examples/: README.rst
docs/specs/: vendor-textual.md
docs/tutorials/: 1.rst  2.rst  3.rst  Dockerfile  additional_features.rst  index.rst  requirements-tutorial.txt
examples/: README.html
news/: +rss_hugetlb.bugfix.rst  111.feature.rst  117.bugfix.rst  129.bugfix.rst  130.feature.rst  133.bugfix.rst  134.bugfix.rst  136.bugfix.1.rst  136.bugfix.2.rst  136.bugfix.3.rst  136.bugfix.4.rst  136.bugfix.5.rst  136.feature.rst  136.removal.rst  138.feature.rst  141.bugfix.rst  142.feature  147.bugfix.1.rst  147.bugfix.2.rst  147.bugfix.3.rst  152.bugfix.rst  174.feature  176.bugfix.rst  185.feature.rst  194.feature  200.feature  201.feature  206.removal  209.bugfix  209.feature.1  209.feature.2  211.feature  228.bugfix  237.feature.rst  241.feature  251.bugfix  261.feature  266.feature  268.feature  274.feature.rst  (+123 more)
src/assets/: common.js  flamegraph.js  table.js
src/bloomberg/pensieve/_pensieve/: CMakeLists.txt  elf_shenanigans.cpp  elf_shenanigans.h  elf_utils.h  exceptions.h  frame_tree.h  guards.cpp  guards.h  hooks.cpp  hooks.h  interval_tree.cpp  interval_tree.h  logging.cpp  logging.h  logging.pxd  native_resolver.cpp  native_resolver.h  pthread.pxd  python_helpers.cpp  python_helpers.h  record_reader.cpp  record_reader.h  record_reader.pxd  record_writer.cpp  record_writer.h  record_writer.pxd  records.cpp  records.h  records.pxd  sink.cpp  sink.h  sink.pxd  snapshot.cpp  snapshot.h  snapshot.pxd  socket_reader_thread.cpp  socket_reader_thread.h  socket_reader_thread.pxd  source.cpp  source.h  (+7 more)
src/memray/: __init__.py  __init__.pyi  __main__.py  _attach_callback.py  _destination.py  _errors.py  _memray.pyi  _memray.pyx  _memray_test_utils.pyx  _metadata.py  _stats.py  _stats.pyi  _test.py  _test_utils.pyi  _thread_name_interceptor.py  _version.py
src/memray/_memray/: CMakeLists.txt  algorithm.pxd  alloc.h  alloc.pxd  compat.cpp  compat.h  cpython_shenanigans.cpp  cpython_shenanigans.h  elf_shenanigans.cpp  elf_shenanigans.h  elf_utils.cpp  elf_utils.h  exceptions.h  frame_tree.h  ghost_stack_test_utils.cpp  ghost_stack_test_utils.h  hooks.cpp  hooks.h  hooks.pxd  inject.cpp  interval_tree.cpp  interval_tree.h  linker_shenanigans.h  logging.cpp  logging.h  logging.pxd  lz4_stream.h  macho_shenanigans.cpp  macho_utils.h  native_resolver.cpp  native_resolver.h  native_resolver.pxd  pthread.pxd  python_helpers.cpp  python_helpers.h  record_reader.cpp  record_reader.h  record_reader.pxd  record_writer.cpp  record_writer.h  (+20 more)
src/memray/_memray/ghost_stack/: BUG_FIX_DESCRIPTION.md
src/memray/_memray/ghost_stack/include/: ghost_stack.h
src/memray/_memray/ghost_stack/src/: aarch64_darwin_trampoline.s  aarch64_linux_trampoline.s  ghost_stack.cpp  x86_64_linux_trampoline.s
tests/: conftest.py  test_utils.py  utils.py
tests/integration/: test_api.py  test_attach.py  test_extensions.py  test_flamegraph.py  test_ghost_stack.py  test_greenlet.py  test_ipython.py  test_main.py  test_native_tracking.py  test_object_tracking.py  test_processes.py  test_record_writer.py  test_records.py  test_smoke.py  test_socket.py  test_table_reporter.py  test_threads.py  test_tracing.py  test_tracking.py  test_tui.py
tests/unit/: conftest.py  test_allocation_lifetime_aggregator.py  test_cli.py  (+16 more)
tools/: check_vendor_versions.py
tutorials/: 1.html  2.html  3.html  additional_features.html  index.html
(+397 files in other folders)
